# momo

./: .env  Cargo.toml  Makefile  README.md  update-db.sh
entity/: Cargo.toml
entity/src/: lib.rs  misc.rs  prelude.rs  show.rs  subscription.rs  user.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.tsx  types.ts
frontend/src/components/: Login.tsx  Navbar.tsx  Overview.tsx  Subscription.tsx
frontend/src/pages/: Home.tsx
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250211_173500_add_sync_information.rs
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/local/2025-02-14-162608_init/: down.sql  up.sql
migrations/remote/2025-02-14-162608_init/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs  schema_local.rs  schema_remote.rs  torrent.rs
