[package]
name = "momo"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
anyhow = "1.0.95"
entity = { path = "entity" }
migration = { path = "migration"}

sea-orm = { version = "1.1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_bencode = "0.2"
sha1 = "0.10"
hex = "0.4"

[dependencies.tokio]
version = "1.43.0"
features = [

]
