[package]
name = "momo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_bencode = "0.2"
serde_json = "1.0.138"
sha1 = "0.10"
hex = "0.4"
dotenvy = "0.15"

[dependencies.diesel]
version = "2.2.0"
features = ["postgres", "sqlite"]

[dependencies.tokio]
version = "1.43.0"
features = ["rt", "rt-multi-thread", "macros"]
